[package]
name = "mh-mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
compress-tools = "0.14.3"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
gtk4 = { version = "0.8.1", features = ["v4_6", "v4_10", "v4_12"] }
libadwaita = "0.6.0"
relm4 = { version = "0.8.1", features = ["libadwaita"] }
relm4-components = "0.8.1"
futures = "0.3.30"
tokio = {version = "1.37.0", features = ["full"]}
